# TA-Demo

./: .gitignore  docker-compose.yml  package-lock.json  package.json  turbo.json
.claude/: settings.local.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 353583bd610f_initial_schema.py  44c6adc68abd_add_logo_url_to_tenants.py  d0ed6397573a_add_exec_layer_and_memo_action_fields.py
apps/api/src/: __init__.py  config.py  database.py  demo_auth.py  main.py  responses.py
apps/api/src/models/: __init__.py  brief_snapshot.py  event.py  evidence.py  lease.py  portfolio.py  property.py  score_snapshot.py  tenant.py
apps/api/src/routers/: brief.py  events.py  properties.py  search.py  tenants.py
apps/api/src/schemas/: base.py  brief.py  event.py  property.py  search.py  tenant.py
apps/api/src/seed/: __init__.py  load.py
apps/api/src/seed/fixtures/: brief_snapshots.json  events.json  evidence.json  leases.json  portfolios.json  properties.json  score_snapshots.json  tenants.json
apps/api/src/validators/: __init__.py  citation_validator.py  memo_validator.py
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: use-media-query.ts
apps/web/src/lib/: api.ts  images.ts  mock-data.ts  utils.ts
apps/web/src/stores/: ui-store.ts
apps/web/src/types/: index.ts
design/: BUILD_PLAN_UX_UPGRADE.md  DEV_HANDOVER.md  addendum.md  credit-oversight-build-guide.md  demo-data.md  notes.md  pages.md  spec.md  theme.md
(+112 files in other folders)
